NEWS for the R Package Luminescence

Changes in version 0.5.0 (, 2015):

  Changes S4-objects, methods, classes:

         • Extend class definition for ‘RLum’-class by slots
           ‘originator’ and ‘.uid’ (and with that for all
           ‘RLum’classes)

  New functions:

         • ‘calc_gSGC()’ Calculate De value based on the gSGC by Li et
           al., 2015

         • ‘plot_NRt()’ Creates a Natural/Regenerated signal vs. time
           (NR(t)) plot as shown in Steffen et al. 2009

         • ‘read_Daybreak2R()’ Imports data prodcued by a Daybreak
           TL/OSL reader

         • ‘use_DRAC()’ Provides an R interface to

  Bugfixes and changes:

         • ‘analyse_SAR.CWOSL()’

             • Internal curve selection now works using the ‘get_RLum’.
               This should give a little bit more flexibility and
               prevent errors with odd curve names,

             • in the rare case where no recuperation rate can be
               calculated due to the missing R0 point the function
               stopped with an error. Corrected.

         • ‘calc_Statistics()’

             • Weighted median is now completly removed from the
               calculation, values is replaced by the unweighted
               median.

         • ‘fit_LMCurve()’

             • Argument ‘output.plot’ renamed to ‘plot’,

             • argument ‘output.plotBG’ renamed to ‘plot.BG’,

             • arguemtn ‘output.terminal’ renamed to ‘verbose’,

             • argument ‘output.path’ removed without replacement,
               corresponding code has been removed from the function,

             • argument ‘cex.global’ removed, scaling can be still used
               via ‘cex’

             • argument ‘output.terminaladvanced’ has been removed
               without replacement, terminal output can just be
               triggered via ‘verbose’,

             • new argument added ‘fit.method’. Argument works similar