@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Thu Aug 13 17:24:34 2015
+% Thu Aug 13 19:22:44 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
